changed connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\MY_DB;Database=UserEventsDb;User Id=UserEventsApi;Password=My@Password;"
+    "DefaultConnection": "Server=localhost;Database=UserEventsDb;User Id=sa;Password=My@Password;"
   },
 
   "Logging": {
